--- a/talk.html
+++ b/talk.html
@@ -37,7 +37,7 @@
 <body>
 	  <div id="chat"></div>
 	  <form id="form">
-      <input type="text" autocomplete="off" id="text"><input id='go' type="submit" value="send">
+      <input type="text" autocomplete="off" id="text"><input id='go' type="button" value="send">
       </form>
 	
 </body>
